                                  _   _ ____  _
                              ___| | | |  _ \| |
                             / __| | | | |_) | |
                            | (__| |_| |  _ <| |___
                             \___|\___/|_| \_\_____|

                                  Changelog

Daniel Fandrich (3 Dec 2008)
- Pawel Kierski pointed out a mistake in the cookie code that could lead to a
  bad fclose() after a fatal error had occured.
  (http://curl.haxx.se/bug/view.cgi?id=2382219)

Daniel Fandrich (25 Nov 2008)
- If a HTTP request is Basic and num is already >=1000, the HTTP test
  server adds 1 to num to get the data section to return. This allows
  testing authentication negotiations using the Basic authentication
  method.

- Added tests 1087 and 1088 to test Basic authentication on a redirect
  with and without --location-trusted

Daniel Stenberg (24 Nov 2008)
- Based on a patch by Vlad Grachov, libcurl now uses a new libssh2 0.19
  function when built to support SCP and SFTP that helps the library to know
  in which direction a particular libssh2 operation would return EAGAIN so
  that libcurl knows what socket conditions to wait for before trying the
  function call again. Previously (and still when using libssh2 0.18 or
  earlier), libcurl will busy-loop in this situation when the easy interface
  is used!

Daniel Fandrich (20 Nov 2008)
- Automatically detect OpenBSD's CA cert bundle.

Daniel Stenberg (19 Nov 2008)
- I removed the default use of "Pragma: no-cache" from libcurl when a proxy is
  used. It has been used since forever but it was never a good idea to use
  unless explicitly asked for.

- Josef Wolf's extension that allows a $TESTDIR/gdbinit$testnum file that when
  you use runtests.pl -g, will be sourced by gdb to allow additional fancy or
  whatever you see fit

- Christian Krause reported and fixed a memory leak that would occur with HTTP
  GSS/kerberos authentication (http://curl.haxx.se/bug/view.cgi?id=2284386)
